--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,2 @@
-# Core dependency, Django is the web framework
-django==3.1
-
-# Used for interacting with PostgreSQL database
-psycopg2-binary==2.8.6
-
-# Used for easier forms
-django-crispy-forms==1.10.0
+# Fast API
+fastapi[all]
