--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "reactstrap": "^8.9.0",
+    "recharts": "^2.0.4",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
