--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "eslint": "^7.18.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "reactstrap": "^8.9.0",
     "recharts": "^2.0.4",
